syntax = "proto3";

package video.v1;

option go_package = "github.com/bionicotaku/lingo-services-catalog/api/video/v1;videov1";

import "buf/validate/validate.proto";

// UploadService 管理移动端直传 GCS 的会话初始化流程。
service UploadService {
  // InitResumableUpload 预留 video_id 并返回一次性的 V4 Signed URL。
  rpc InitResumableUpload(InitResumableUploadRequest) returns (InitResumableUploadResponse);
}

// InitResumableUploadRequest 描述移动端在上传前上报的元数据。
message InitResumableUploadRequest {
  int64 size_bytes = 1 [(buf.validate.field).int64.gte = 0];
  string content_type = 2 [(buf.validate.field).string = {min_len: 1}];
  string content_md5_hex = 3 [(buf.validate.field).string = {len: 32, pattern: "^[a-fA-F0-9]{32}$"}];
  int32 duration_seconds = 4 [(buf.validate.field).int32 = {gte: 1, lte: 300}];
  string title = 5 [(buf.validate.field).string = {min_len: 1}];
  string description = 6 [(buf.validate.field).string = {min_len: 1}];
}

// InitResumableUploadResponse 返回预留的视频标识与会话初始化 URL。
message InitResumableUploadResponse {
  string video_id = 1 [(buf.validate.field).string.uuid = true];
  string resumable_init_url = 2 [(buf.validate.field).string = {min_len: 1}];
  int64 expires_at_unixms = 3 [(buf.validate.field).int64.gt = 0];
}
