syntax = "proto3";

package video.v1;

option go_package = "github.com/bionicotaku/lingo-services-catalog/api/video/v1;videov1";

import "buf/validate/validate.proto";

// VideoQueryService 提供视频只读查询能力。
service VideoQueryService {
  // GetVideoDetail 根据 video_id 返回视频元数据。
  rpc GetVideoDetail(GetVideoDetailRequest) returns (GetVideoDetailResponse);
  // ListUserPublicVideos 返回公开可见的视频列表。
  rpc ListUserPublicVideos(ListUserPublicVideosRequest) returns (ListUserPublicVideosResponse);
  // ListMyUploads 返回当前用户上传的视频列表。
  rpc ListMyUploads(ListMyUploadsRequest) returns (ListMyUploadsResponse);
}

// VideoCommandService 提供视频写操作能力。
service VideoCommandService {
  // CreateVideo 创建新视频记录
  rpc CreateVideo(CreateVideoRequest) returns (CreateVideoResponse);
  // UpdateVideo 更新视频元数据
  rpc UpdateVideo(UpdateVideoRequest) returns (UpdateVideoResponse);
  // DeleteVideo 删除视频记录
  rpc DeleteVideo(DeleteVideoRequest) returns (DeleteVideoResponse);
}

// GetVideoDetailRequest 表示查询参数。
message GetVideoDetailRequest {
  string video_id = 1 [(buf.validate.field).string.uuid = true]; // UUID 字符串
}

// GetVideoDetailResponse 封装查询结果。
message GetVideoDetailResponse {
  VideoDetail detail = 1;
}

// VideoDetail 只读视图，仅包含 ready/published 状态视频的核心字段。
// 数据来源：catalog.videos 主表以及 engagement 投影
message VideoDetail {
  string video_id = 1;                                         // 视频 ID
  string title = 2;                                            // 标题
  string status = 3;                                           // 状态（ready/published）
  string media_status = 4;                                     // 媒体处理状态
  string analysis_status = 5;                                  // AI 分析状态
  string created_at = 6;                                       // 创建时间（UTC RFC3339）
  string updated_at = 7;                                       // 更新时间（UTC RFC3339）
  bool has_liked = 8;                                          // 是否点赞
  bool has_bookmarked = 9;                                     // 是否收藏
  bool has_watched = 10;                                       // 是否观看
}

message ListUserPublicVideosRequest {
  int32 page_size = 1;                                         // 每页数量（默认 20，最大 100）
  string page_token = 2;                                       // 游标分页 token
}

message ListUserPublicVideosResponse {
  repeated VideoListItem videos = 1;                           // 视频列表
  string next_page_token = 2;                                  // 下页游标
}

message ListMyUploadsRequest {
  int32 page_size = 1;                                         // 每页数量
  string page_token = 2;                                       // 游标
  repeated string status_filter = 3;                           // 可选状态过滤
}

message ListMyUploadsResponse {
  repeated MyUploadListItem videos = 1;                        // 我的上传列表
  string next_page_token = 2;                                  // 下页游标
}

message VideoListItem {
  string video_id = 1;
  string title = 2;
  string status = 3;
  string media_status = 4;
  string analysis_status = 5;
  string created_at = 6;
  string updated_at = 7;
}

message MyUploadListItem {
  string video_id = 1;
  string title = 2;
  string status = 3;
  string media_status = 4;
  string analysis_status = 5;
  int64 version = 6;
  string created_at = 7;
  string updated_at = 8;
}

// CreateVideoRequest 表示创建视频的请求参数。
// video_id 由数据库自动生成，不允许客户端指定
message CreateVideoRequest {
  string upload_user_id = 1 [(buf.validate.field).string.uuid = true]; // 上传者 ID (UUID)
  string title = 2 [(buf.validate.field).string.min_len = 1]; // 标题
  optional string description = 3;                             // 描述 (可选)
  string raw_file_reference = 4 [(buf.validate.field).string.min_len = 1]; // 原始文件引用 (GCS 路径)
}

// CreateVideoResponse 表示创建视频的响应。
message CreateVideoResponse {
  string video_id = 1;                                         // 创建的视频 ID
  string created_at = 2;                                       // 创建时间（UTC RFC3339）
  string status = 3;                                           // 视频状态
  string media_status = 4;                                     // 媒体处理状态
  string analysis_status = 5;                                  // 分析状态
  string event_id = 6;                                         // 事件 ID（用于客户端幂等与回放）
  int64 version = 7;                                           // 聚合版本号
  string occurred_at = 8;                                      // 事件发生时间（UTC RFC3339）
}

// UpdateVideoRequest 表示对视频元数据的部分更新请求。
// 仅填充需要更新的字段，其余字段保持不变。
message UpdateVideoRequest {
  string video_id = 1 [(buf.validate.field).string.uuid = true]; // 视频 ID（必填）
  optional string title = 2;                                   // 标题
  optional string description = 3;                             // 描述
  optional string status = 4;                                  // 视频状态
  optional string media_status = 5;                            // 媒体阶段状态
  optional string analysis_status = 6;                         // 分析阶段状态
  optional int64 duration_micros = 7 [(buf.validate.field).int64.gte = 0]; // 视频时长（微秒）
  optional string thumbnail_url = 8;                           // 缩略图 URL
  optional string hls_master_playlist = 9;                     // HLS 主清单
  optional string difficulty = 10;                             // 难度
  optional string summary = 11;                                // 摘要
  optional string raw_subtitle_url = 12;                       // 原始字幕
  optional string error_message = 13;                          // 错误信息
}

// UpdateVideoResponse 返回更新后的核心字段与事件元数据。
message UpdateVideoResponse {
  string video_id = 1;                                         // 视频 ID
  string updated_at = 2;                                       // 更新时间（UTC RFC3339）
  string status = 3;                                           // 视频状态
  string media_status = 4;                                     // 媒体阶段状态
  string analysis_status = 5;                                  // 分析阶段状态
  string event_id = 6;                                         // 事件 ID
  int64 version = 7;                                           // 聚合版本号
  string occurred_at = 8;                                      // 事件发生时间（UTC RFC3339）
}

// DeleteVideoRequest 表示删除视频的请求。
message DeleteVideoRequest {
  string video_id = 1 [(buf.validate.field).string.uuid = true]; // 视频 ID（必填）
  optional string reason = 2;                                  // 删除原因（可选）
}

// DeleteVideoResponse 返回删除操作的事件元数据。
message DeleteVideoResponse {
  string video_id = 1;                                         // 被删除的视频 ID
  string deleted_at = 2;                                       // 删除时间（UTC RFC3339）
  string event_id = 3;                                         // 事件 ID
  int64 version = 4;                                           // 聚合版本号
  string occurred_at = 5;                                      // 事件发生时间（UTC RFC3339）
}
